css/skeleton.css
/* ... */
.project_logo{
  width: 25%;
  background-color: black;
  background: rgba(0,0,0, .5);
}

.three.columns{
  text-align: center;
  background-size: cover;
}

.mobile_row{
  display: none;
}

.column_background{
  background-color: #313131;
  height: 250px;
  margin-top: -10px;
}

.research {
    background: url(../images/books.jpg);
}

.infoarchi {
    background: url(../images/drawers.jpg);
}

.branding {
    background: url(../images/type.jpg);
}

.visualdesign {
    background: url(../images/me_design.jpg);
}

.testing {
    background: url(../images/3phones.jpg);
}

.background{
  position:relative;
  height: 250px;
  overflow: hidden;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  margin-top: 2%;
}

.section-text h3{
  /*position:relative;*/
  padding: 20px 20px;
  background-color: black;
  background: rgba(0,0,0, .5);
  margin: 80px 0px 0px;
  text-align: center;
}

.center{
  margin-top: 10%;
  /*padding: 0px 0px;*/
  text-align: center;
}

.subsection{
  margin-top: 10%
}

.subcontainer{
  width: 100%;
  background-color: #303030;
}

.centered-persona{
  margin: 10% 1%;
  text-align: center;
}

.survey{
  margin-top: -7.5%;
}

/*Blocbox––––––––––––––––––––––––––––––––––––––––––––––––––-*/

.blocbox_hero{
 background: url(../images/blocbox_showcase.png) no-repeat center;
 background-size: contain;
}

.bb_logo {
  width: 40%;
}

.four.columns.subsection.centered-persona{
  width:31%;
}

.one_column_logos{
  width: 60%;
  margin: 0 20%;
}

.justified {
  text-align:
}
























































































/*  Queries
–––––––––––––––––––––––––––––––––––––––––––––––––– */
/*
Note: The best way to structure the use of  queries is to create the queries
near the relevant code. For example, if you wanted to change the styles for buttons
on small devices, paste the mobile query code up in the buttons section and style it
there.
*/

/*Smaller than phablet (also point when grid becomes active) */
@media (max-width: 550px) {

  h1, h3, h4 {
    font-weight: 600;
    background-color:#121212;
    background: rgba(0,0,0, .5);
  }

  .hero h5{
    background-color:#121212;
    background: rgba(0,0,0, .5);
  }
  .project_background h5, img{
    background-color:#121212;
    background: rgba(0,0,0, .5);
  }

  p {
    font-size: 1.5rem;
    margin-top: 0;
  }

  .navigation{
    margin-top: -50px;
  }

  .hero{
    height: 400px;
  }

  .centered-text{
    margin: 10% 5%;
    text-align: center;
  }

  .lastsection{
    position:relative;
    height: 180px;
    overflow: hidden;
    background: url(../images/background_triangle_black_yellow.png) no-repeat center;
    background-size: 800px;
  }

  .about-img{
    height:160px;
  }

  .row {
    display:grid;
    /*grid-template-columns: repeat (auto)*/
  }

  .project-img{
    order: 1;
  }

  .footnav{
    margin-top: -30px;
  }


  /*Project Specific Codes ––––––––––––––––––––––––––––––––––––––––––––––––––-*/
  /*Filo––––––––––––––––––––––––––––––––––––––––––––––––––-*/
  .project_hero{
    min-height: 250px;
    background: url(../images/filo_showcase.png) no-repeat;
    background-size: contain;
  }

  .centered-nav{
    margin: 10%;
    text-align: center;
  }

  .one-fifth.column{
    display: grid;
    width: 100%;
    margin: 2.5%;
    /*vertical-align: middle;*/
  }

  .one-fifth.column li{
    background-color: #121212;
    border-radius: 4px;
    border: 3px solid white;
    margin-top: 2%;
    height: 42px;
    display: grid;
    align-items: center;
  }

  .laptop {
    display: none;
  }

  .container.mobile{
    margin-left: 5%;
    margin-top: 15%;
    display: block;
  }

  .project_logo{
    width: 50%;
  }

  .row h4, .showcase-img, .center h4, .about-img{
    background-color: transparent;
  }

  .row, .background{
    margin-top: 10%
  }

  .goals {
    margin-top: 25%;
  }

  .survey{
    margin-top: -10%;
  }

  /*
  .three.columns.subcontainer.container h5, p{
    margin-left: 1%;
    align-items: center;
  }*/

  /*.midsection1 .three {
    display: inline-block;
    width: 25%;
    margin: 2.5% 2.5% 2.5% 1%;
  }*/

  .header .row {
      margin-top: 0px;
  }

  .footer {
    padding-top: 0px;
  }

  .mobile_resptools{
    width: 46%;
    margin: 2%;

  }

  .laptop_row{
    display: none;
  }

  .mobile_row{
    display: block;
  }

  .taller_bg{
    height: 220px;
  }

/*Blocbox––––––––––––––––––––––––––––––––––––––––––––––––––-*/
  .blocbox_hero{
    background: url(../images/blocbox_showcase.png) no-repeat center;
    background-size: contain;
  }

  .four.columns.subsection.centered-persona{
    width:100%;
  }

  .four.columns.subsection.centered-persona h5{
    background-color: black;
    margin:0 3% 0 1%;
  }

}

/*Mobile*/
@media (max-width: 411px){
div.container {
  position: relative;
  width: 100%;
  max-width: 960px;
  margin: 0;
  padding: 0 20px;
  box-sizing: none;
  /*float: center;*/
  /*background-color: red;*/
}

.container.mobile {
  margin-left: -5px;
}

.mobile_resptools.container{
  /*margin-top: 25px;*/
  padding: 20px 5px;
}

.subcontainer2 {
  padding: 0px;
}
}


/* Larger than phablet (also point when grid becomes active) */
@media (min-width: 550px) {}

/* Larger than tablet */
@media (min-width: 750px) {}

/* Larger than desktop */
@media (min-width: 1000px) {}

/* Larger than Desktop HD */
@media (min-width: 1200px) {}

